fixing swagger + adding documentation
